--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "07d5afb9-2ccb-4a01-b4e8-de8532b25eef"
 authors = ["António Menezes Leitão <antonio.menezes.leitao@gmail.com>"]
 version = "0.1.0"
 
+[deps]
+KhepriBase = "4cc0fe96-1163-46f3-ba32-de1e65d9548f"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+
 [compat]
 julia = "1.6"
 
